add_executable(ex1-hello ex1-hello.cpp)
add_executable(ex2-get_id ex2-get_id.cpp)
add_executable(ex3-no_mutex ex3-no_mutex.cpp)
add_executable(ex4-mutex ex4-mutex.cpp)
add_executable(ex5-read_write ex5-read_write.cpp)
add_executable(ex6-return_value ex6-return_value.cpp)
add_executable(ex7-pi ex7-pi.cpp)
add_executable(ex8-matvec ex8-matvec.cpp)
add_executable(ex9-burgerstack ex9-burgerstack.cpp)
add_executable(ex10-future ex10-future.cpp)
add_executable(ex11-false_sharing ex11-false_sharing.cpp)
